CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SimpleABCViewer) # .sln

FIND_PACKAGE(OPENGL REQUIRED)
MESSAGE(STATUS ${OPENGL_LIBRARIES})
FIND_PACKAGE(GLUT REQUIRED)
MESSAGE(STATUS ${GLUT_LIBRARY})
STRING(REPLACE lib/freeglut.lib debug/lib/freeglutd.lib GLUT_LIBRARY_DEBUG ${GLUT_LIBRARY})
SET(OPENGL_LIBS 
    general ${OPENGL_LIBRARIES} 
    optimized ${GLUT_LIBRARY} 
    debug ${GLUT_LIBRARY_DEBUG}
    )

SET(ALEMBIC_ILMBASE_LIBS
    debug ${CMAKE_INSTALL_PREFIX}/debug/lib/Alembic.lib
    optimized ${CMAKE_INSTALL_PREFIX}/lib/Alembic.lib
    )

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_LIST_DIR}
    ${CMAKE_INSTALL_PREFIX}/include
    ${CMAKE_INSTALL_PREFIX}/include/OpenEXR
    )

ADD_SUBDIRECTORY(AbcOpenGL)
ADD_SUBDIRECTORY(src)

